crates/protocol/src/snapshots/cookie_agent_protocol__tests__persisted_turn_typescript.snap
---
source: crates/protocol/src/tests.rs
expression: "PersistedModelTurn::export_to_string(&config).unwrap()"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { ModelFinishReason } from "./ModelFinishReason";
import type { NativeReplayArtifact } from "./NativeReplayArtifact";
import type { PersistedAssistantPart } from "./PersistedAssistantPart";
import type { Usage } from "./Usage";
import type { JsonValue } from "./serde_json/JsonValue";

export type PersistedModelTurn = { content: Array<PersistedAssistantPart>, provider_options: { [key in string]: JsonValue }, finish_reason: ModelFinishReason, usage: Usage, response_metadata: { [key in string]: JsonValue }, provider_metadata: { [key in string]: JsonValue }, native_replay: NativeReplayArtifact | null, };
