crates/protocol/src/snapshots/cookie_agent_protocol__tests__prepared_approval_resource_typescript_snapshot.snap
---
source: crates/protocol/src/lib.rs
expression: "PreparedApprovalResource::export_to_string(&typescript_config()).expect(\"export prepared approval resource TypeScript\")"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { ActionKind } from "./ActionKind";
import type { ApprovalBoundary } from "./ApprovalBoundary";
import type { ApprovalResourceSource } from "./ApprovalResourceSource";
import type { PreparedBindingLifetime } from "./PreparedBindingLifetime";
import type { PreparedResourceDigest } from "./PreparedResourceDigest";
import type { PreparedResourceIdentity } from "./PreparedResourceIdentity";

/**
 * One immutable prepared canonical resource disclosed by an approval request.
 * `source` is provenance only and never contributes to operation identity.
 */
export type PreparedApprovalResource = { capability: ActionKind, canonical: PreparedResourceIdentity, binding_digest: PreparedResourceDigest, binding_lifetime: PreparedBindingLifetime, boundary: ApprovalBoundary, source: ApprovalResourceSource, };
