crates/protocol/src/snapshots/cookie_agent_protocol__tests__prepared_operation_identity_typescript_snapshot.snap
---
source: crates/protocol/src/lib.rs
expression: "PreparedOperationIdentity::export_to_string(&typescript_config()).expect(\"export prepared operation identity TypeScript\")"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { ApprovalCapability } from "./ApprovalCapability";
import type { PreparedApprovalResource } from "./PreparedApprovalResource";
import type { PreparedCapabilityLifetime } from "./PreparedCapabilityLifetime";
import type { Sha256Digest } from "./Sha256Digest";

/**
 * Complete canonical identity of one prepared tool operation. Arguments are
 * represented by the digest of their normalized, resource-reference form so
 * raw paths and process-local descriptor/temp identifiers never enter the
 * durable identity.
 */
export type PreparedOperationIdentity = { normalized_arguments_digest: Sha256Digest, capabilities: Array<ApprovalCapability>, resources: Array<PreparedApprovalResource>, execution_context_digest: Sha256Digest, capability_lifetime: PreparedCapabilityLifetime, };
