crates/protocol/src/snapshots/cookie_agent_protocol__tests__provider_connect_result_typescript_snapshot.snap
---
source: crates/protocol/src/lib.rs
expression: "ProviderConnectResult::export_to_string(&ts_rs::Config::default()).expect(\"export provider connect result TypeScript\")"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { ProviderConnection } from "./ProviderConnection";

/**
 * Result for `provider.connect`; credential values are never echoed.
 */
export type ProviderConnectResult = { client_connect_id: string, connection: ProviderConnection, model_revision: string, };
