crates/protocol/src/snapshots/cookie_agent_protocol__tests__provider_connect_schema.snap
---
source: crates/protocol/src/tests.rs
expression: schema_for!(ProviderConnectParams)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "ProviderConnectParams",
  "type": "object",
  "properties": {
    "catalog_revision": {
      "type": "string",
      "const": "sha256:d65af0b058204954f6b08af537fa13e91f251c618d69d8c20a2d5915731d482a"
    },
    "client_connect_id": {
      "description": "Bounded provider connection idempotency key.",
      "type": "string",
      "maxLength": 256,
      "minLength": 1,
      "pattern": "^[^\\p{Cc}\\p{Cf}]+$"
    },
    "credentials": {
      "$ref": "#/$defs/ProviderCredentials"
    },
    "provider_id": {
      "type": "string",
      "maxLength": 128,
      "minLength": 1,
      "pattern": "^[a-z0-9._-]+$"
    }
  },
  "additionalProperties": false,
  "required": [
    "client_connect_id",
    "provider_id",
    "catalog_revision",
    "credentials"
  ],
  "$defs": {
    "ProviderCredentials": {
      "type": "object",
      "properties": {
        "values": {
          "type": "object",
          "additionalProperties": false,
          "maxProperties": 32,
          "minProperties": 0,
          "patternProperties": {
            "^[A-Z0-9_]+$": {
              "type": "string",
              "maxLength": 16384,
              "minLength": 1,
              "writeOnly": true
            }
          },
          "propertyNames": {
            "type": "string",
            "maxLength": 1024,
            "minLength": 1,
            "pattern": "^[A-Z0-9_]+$"
          },
          "writeOnly": true
        }
      },
      "additionalProperties": false,
      "required": [
        "values"
      ]
    }
  }
}
