crates/protocol/src/snapshots/cookie_agent_protocol__tests__provider_connect_typescript.snap
---
source: crates/protocol/src/tests.rs
expression: "ProviderConnectParams::export_to_string(&config).unwrap()"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { CatalogRevision } from "./CatalogRevision";
import type { ClientConnectId } from "./ClientConnectId";
import type { ProviderCredentials } from "./ProviderCredentials";

export type ProviderConnectParams = { client_connect_id: ClientConnectId, provider_id: ProviderId, catalog_revision: CatalogRevision, credentials: ProviderCredentials, };
