crates/protocol/src/snapshots/cookie_agent_protocol__tests__run_start_schema.snap
---
source: crates/protocol/src/tests.rs
expression: schema_for!(RunStartParams)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "RunStartParams",
  "type": "object",
  "properties": {
    "client_run_id": {
      "description": "Bounded run idempotency key.",
      "type": "string",
      "maxLength": 256,
      "minLength": 1,
      "pattern": "^[^\\p{Cc}\\p{Cf}]+$"
    },
    "input": {
      "type": "string"
    },
    "selection": {
      "$ref": "#/$defs/RunSelection"
    },
    "session_id": {
      "type": "string",
      "format": "uuid"
    }
  },
  "additionalProperties": false,
  "required": [
    "session_id",
    "client_run_id",
    "selection",
    "input"
  ],
  "$defs": {
    "RunSelection": {
      "type": "object",
      "properties": {
        "agent": {
          "type": "string",
          "maxLength": 64,
          "minLength": 1,
          "pattern": "^[a-z0-9](?:[a-z0-9]|-(?=[a-z0-9]))*$"
        },
        "model": {
          "description": "One exact base or named-variant model selection.",
          "type": "object",
          "properties": {
            "model": {
              "type": "string",
              "maxLength": 512,
              "minLength": 3,
              "pattern": "^[a-z0-9._-]{1,128}/[^/\\u0000-\\u0020\\u007f](?:[^/\\u0000-\\u001f\\u007f]{0,382}[^/\\u0000-\\u0020\\u007f])?$"
            },
            "variant": {
              "type": [
                "string",
                "null"
              ],
              "maxLength": 64,
              "minLength": 1,
              "pattern": "^(?!base$)[a-z0-9._-]+$"
            }
          },
          "additionalProperties": false,
          "required": [
            "model",
            "variant"
          ]
        }
      },
      "additionalProperties": false,
      "required": [
        "agent",
        "model"
      ]
    }
  }
}
