crates/protocol/src/snapshots/cookie_agent_protocol__tests__run_start_typescript.snap
---
source: crates/protocol/src/tests.rs
expression: "RunStartParams::export_to_string(&config).unwrap()"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { ClientRunId } from "./ClientRunId";
import type { RunSelection } from "./RunSelection";
import type { SessionId } from "./SessionId";

export type RunStartParams = { session_id: SessionId, client_run_id: ClientRunId, selection: RunSelection, input: string, };
