crates/protocol/src/snapshots/cookie_agent_protocol__tests__runtime_snapshot_typescript_snapshot.snap
---
source: crates/protocol/src/tests.rs
expression: "RuntimeSnapshotResult::export_to_string(&typescript_config()).unwrap()"
---
// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
import type { RuntimeSnapshotV1 } from "./RuntimeSnapshotV1";

export type RuntimeSnapshotResult = { snapshot: RuntimeSnapshotV1, };
